<resources>
    <string name="app_name">Check Digit</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="checkdigit_default">foo</string>
    <string name="location_default">foo</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Card strings -->
    <string name="error_card_message">Unable to parse location</string>

    <!-- Camera strings -->
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>

    <!-- Strings related to Settings -->

    <!-- Email settings -->
    <string name="pref_header_email">Email</string>

    <string name="pref_email_server_title">Server address</string>
    <string name="pref_email_port_title">Server port number</string>
    <string name="pref_email_username_title">Email username</string>
    <string name="pref_email_password_title">Email password</string>
    <string name="pref_email_password_summary">No password set</string>

    <string name="pref_email_recipients_title">Email recipients</string>
    <string name="pref_email_recipients_summary">Separate multiple addresses with ‘,’</string>

    <string name="pref_email_subject_title">Email Subject Line</string>
    <string name="pref_email_subject_default">Recent Location Lookups</string>

    <string name="pref_email_test_title">Test email settings</string>
    <string name="pref_email_test_summary">Send test email</string>

    <string name="pref_email_send_now_title">Send records</string>
    <string name="pref_email_send_now_summary">Send all unsent records</string>


    <string name="pref_email_key_time">email.time</string>
    <string name="pref_email_key_days">email.days</string>
    <string name="pref_email_key_server">email.server</string>
    <string name="pref_email_key_port">email.port</string>
    <string name="pref_email_key_subject">email.subject</string>
    <!-- old recipients storage format, now stored as json in pref_email_key_recipients_set-->
    <string name="pref_email_key_recipients">email.recipients</string>
    <string name="pref_email_key_recipients_set">email.recipients.set</string>
    <string name="pref_email_key_password">email.password</string>
    <string name="pref_email_key_username">email.username</string>
    <string name="pref_email_key_test">email.test</string>
    <!-- END Email Preferences -->

    <!-- Password Settings -->
    <string name="pref_header_password">Settings Password</string>

    <string name="pref_password_title_password">Settings password</string>
    <string name="pref_password_key_password">settings.password</string>

    <string name="pref_password_title_reset">Reset password to default</string>
    <string name="pref_password_summary_reset">Password will default to ‘1234’</string>
    <string name="pref_password_key_reset">settings.password.reset</string>

    <string name="pref_password_title_change">Change password</string>
    <string name="pref_password_key_change">settings.password.change</string>

    <!-- Generic Button Strings -->
    <string name="button_save">Save</string>
    <string name="button_send">Send</string>
    <string name="button_close">Close</string>


    <!-- Records Preferences -->
    <string name="pref_header_records">View Records</string>
    <!-- END Records Preferences -->


    <!-- Report preferences -->
    <string name="pref_header_reports">Reports</string>
    <string name="pref_group_daily_title">Daily Reports</string>
    <string name="pref_group_weekly_title">Weekly Summaries</string>
    <string name="pref_group_monthly_title">Monthly Summaries</string>

    <!-- report keys -->
    <string name="pref_report_daily">report.daily.send</string>
    <string name="pref_report_weekly">report.weekly.send</string>
    <string name="pref_report_monthly">report.monthly.send</string>
    <string name="pref_report_daily_time">report.daily.time</string>
    <string name="pref_report_daily_now_key">report.daily.now</string>
    <string name="pref_report_weekly_now_key">report.weekly.now</string>
    <string name="pref_report_monthly_now_key">report.monthly.now</string>


    <!-- report preference strings -->
    <string name="pref_report_daily_title">Enable daily reports</string>
    <string name="pref_report_daily_summary">Daily report summary</string>
    <string name="pref_report_daily_time_title">Set daily report schedule</string>
    <string name="pref_report_daily_time_summary">Choose day and time to send daily report</string>
    <string name="pref_report_daily_now_title">Send daily report now</string>
    <string name="pref_report_daily_now_summary">Send all records that have not previously been sent</string>

    <string name="pref_report_weekly_title">Enable weekly summaries</string>
    <string name="pref_report_weekly_summary">Weekly report summary</string>
    <string name="pref_report_weekly_now_title">Send weekly summary now</string>
    <string name="pref_report_weekly_now_summary">Send usage report for the current week</string>

    <string name="pref_report_monthly_title">Enable monthly summaries</string>
    <string name="pref_report_monthly_summary">Monthly report summary</string>
    <string name="pref_report_monthly_now_title">Send monthly summary now</string>
    <string name="pref_report_monthly_now_summary">Send usage report for the current month</string>
    <!-- END Report preferences -->
</resources>
