<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="none"
        android:defaultValue=""
        android:inputType="text"
        android:key="@string/pref_email_key_server"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_email_server_title"/>

    <EditTextPreference
        android:capitalize="none"
        android:defaultValue=""
        android:inputType="numberDecimal"
        android:key="@string/pref_email_key_port"
        android:maxLength="5"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_email_port_title"/>

    <EditTextPreference
        android:capitalize="none"
        android:defaultValue=""
        android:inputType="text"
        android:key="@string/pref_email_key_username"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_email_username_title"/>

    <EditTextPreference
        android:capitalize="none"
        android:defaultValue=""
        android:inputType="textPassword"
        android:key="@string/pref_email_key_password"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_email_password_title"/>

    <Preference
        android:icon="@drawable/ic_account_multiple_black_24dp"
        android:key="@string/pref_email_key_recipients_set"
        android:title="@string/pref_email_recipients_title"/>


    <Preference
        android:icon="@drawable/ic_send_black_24dp"
        android:key="@string/pref_email_key_test"
        android:summary="@string/pref_email_test_summary"
        android:title="@string/pref_email_test_title"/>


</PreferenceScreen>
