<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!--<EditTextPreference-->
    <!--android:capitalize="none"-->
    <!--android:defaultValue=""-->
    <!--android:inputType="textPassword"-->
    <!--android:key="@string/pref_password_key_password"-->
    <!--android:maxLines="1"-->
    <!--android:selectAllOnFocus="true"-->
    <!--android:singleLine="true"-->
    <!--android:title="@string/pref_password_title_password"/>-->

    <Preference
        android:key="@string/pref_password_key_change"
        android:title="@string/pref_password_title_change"/>

    <Preference
        android:key="@string/pref_password_key_reset"
        android:summary="@string/pref_password_summary_reset"
        android:title="@string/pref_password_title_reset"/>

</PreferenceScreen>
